PWA機能の実装
- vite-plugin-pwaを追加してPWA機能を有効化
- manifest.jsonとService Workerを自動生成
- インストール手順ページ（/install）を追加
- OS別（Android/iOS）のインストール手順を表示
- PWAアイコンを追加（192x192, 512x512, apple-touch-icon）
- オフライン対応とAPIキャッシュ設定
- QRコードからのアクセスに対応

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nekota Server Web Application</title>
+    <meta name="description" content="Nekota User Management App" />
+    <meta name="theme-color" content="#3b82f6" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <title>Nekota User Page</title>
     <!-- 可愛い丸文字フォント -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
